tried to fix rendering issues.

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,16 @@
-title: "Connor Marrs"
-description: "Mathematics Graduate Student at UC Santa Barbara"
+title: Connor Marrs
+email: your-email@ucsb.edu
 baseurl: ""
 url: "https://connormarrs.github.io"
+
 theme: minima
-markdown: kramdown
-kramdown:
-  math_engine: mathjax
-  input: GFM
-github_username: connormarrs
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "page"
